fix display project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://dinovaw.my.id/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
